# rust-codesign

./: .editorconfig  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  rustfmt.toml  vut.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  signtool.rs
src/: lib.rs  result.rs  signtool.rs
