[package]
name = "codesign"
version = "0.2.0"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Microsoft code signing library (and utility) for Rust"
repository = "https://github.com/forbjok/rust-codesign"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitness = "0.4.0"
log = "0.4.11"
thiserror = "1.0.22"
winreg = "0.7.0"
